--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.3",
     "@mui/x-data-grid": "^5.10.0",
@@ -15,12 +17,13 @@
     "google-maps-react": "^2.0.6",
     "leaflet": "^1.8.0",
     "mapbox-gl": "^2.8.2",
+    "moment": "^2.29.4",
     "react": "^18.1.0",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^18.1.0",
     "react-leaflet": "^4.0.0",
     "react-map-gl": "^7.0.14",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.1.9",
     "sass": "^1.51.0",
