--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "esri-leaflet-geocoder": "^3.1.4",
     "google-maps-react": "^2.0.6",
     "leaflet": "^1.8.0",
     "mapbox-gl": "^2.8.2",
